--- a/cloud-init-alt.cfg
+++ b/cloud-init-alt.cfg
@@ -1,7 +1,20 @@
-user: ec2-user
-disable_root: 1
-ssh_pwauth:   0
+# The top level settings are used as module
+# and system configuration.
 
+# A set of users which may be applied and/or used by various modules
+# when a 'default' entry is found it will reference the 'default_user'
+# from the distro configuration specified below
+users:
+   - default
+
+# If this is set, 'root' will not be able to ssh in and they 
+# will get a message to login instead as the above $user (ubuntu)
+disable_root: true
+
+# This will cause the set+update hostname module to not operate (if true)
+#preserve_hostname: false
+
+ssh_pwauth:   0
 cc_ready_cmd: ['/bin/true']
 locale_configfile: /etc/sysconfig/i18n
 mount_default_fields: [~, ~, 'auto', 'defaults,nofail', '0', '2']
@@ -10,29 +23,73 @@ ssh_genkeytypes:  ~
 ssh_svcname:      sshd
 syslog_fix_perms: ~
 
+# Example datasource config
+# datasource: 
+#    Ec2: 
+#      metadata_urls: [ 'blah.com' ]
+#      timeout: 5 # (defaults to 50 seconds)
+#      max_wait: 10 # (defaults to 120 seconds)
+
+# The modules that run in the 'init' stage
 cloud_init_modules:
+ - migrator
+ - ubuntu-init-switch
+ - seed_random
  - bootcmd
+ - write-files
+ - growpart
  - resizefs
  - set_hostname
+ - users-groups
  - ssh
 
+# The modules that run in the 'config' stage
 cloud_config_modules:
+# Emit the cloud config ready event
+# this can be used by upstart jobs for 'start on cloud-config'.
+ - emit_upstart
+ - disk_setup
  - mounts
  - ssh-import-id
  - locale
  - set-passwords
  - timezone
+ - puppet
+ - chef
+ - salt-minion
  - disable-ec2-metadata
  - runcmd
+ - byobu
 
+# The modules that run in the 'final' stage
 cloud_final_modules:
  - rightscale_userdata
+ - scripts-vendor
  - scripts-per-once
  - scripts-per-boot
  - scripts-per-instance
  - scripts-user
+ - ssh-authkey-fingerprints
  - keys-to-console
  - phone-home
  - final-message
+ - power-state-change
 
-# vim:syntax=yaml
+# System and/or distro specific settings
+# (not accessible to handlers/transforms)
+system_info:
+   # This will affect which distro class gets used
+   distro: alt
+   # Default user name + that default users groups (if added/used)
+   default_user:
+     name: ec2-user
+     lock_passwd: True
+     gecos: ALT Linux
+     groups: [lp wheel uucp proc cdrom floppy cdwriter audio radio scanner xgrp camera]
+     sudo: ["ALL=(ALL) NOPASSWD:ALL"]
+     shell: /bin/bash
+   # Other config here will be given to the distro class and/or path classes
+   paths:
+      cloud_dir: /var/lib/cloud/
+      templates_dir: /etc/cloud/templates/
+   ssh_svcname: ssh
