--- a/systemd/cloud-init.service
+++ b/systemd/cloud-init.service
@@ -1,9 +1,9 @@
 [Unit]
 Description=Initial cloud-init job (metadata service crawler)
 After=local-fs.target network-online.target cloud-init-local.service
-Before=sshd.service sshd-keygen.service systemd-user-sessions.service
+Before=sshd.service systemd-user-sessions.service
 Requires=network-online.target
-Wants=local-fs.target cloud-init-local.service sshd.service sshd-keygen.service
+Wants=local-fs.target cloud-init-local.service sshd.service
 
 [Service]
 Type=oneshot
