switch ec2-user to altlinux

--- a/altlinux/cloud-init-alt.cfg
+++ b/altlinux/cloud-init-alt.cfg
@@ -79,13 +79,13 @@ cloud_final_modules:
 # (not accessible to handlers/transforms)
 system_info:
    # This will affect which distro class gets used
-   distro: alt
+   distro: altlinux
    # Default user name + that default users groups (if added/used)
    default_user:
-     name: ec2-user
-     lock_passwd: True
-     gecos: ALT Linux
-     groups: [lp wheel uucp proc cdrom floppy cdwriter audio radio scanner xgrp camera]
+     name: altlinux
+     lock_passwd: true
+     gecos: ALT Linux Cloud User
+     groups: [wheel, adm, uucp, proc, systemd-journal]
      sudo: ["ALL=(ALL) NOPASSWD:ALL"]
      shell: /bin/bash
    # Other config here will be given to the distro class and/or path classes
