update cloud config

--- a/altlinux/cloud-init-alt.cfg
+++ b/altlinux/cloud-init-alt.cfg
@@ -14,10 +14,10 @@ disable_root: true
 # This will cause the set+update hostname module to not operate (if true)
 #preserve_hostname: false
 
-ssh_pwauth:   0
-cc_ready_cmd: ['/bin/true']
-locale_configfile: /etc/sysconfig/i18n
+ssh_pwauth: 0
+
 mount_default_fields: [~, ~, 'auto', 'defaults,nofail', '0', '2']
+
 ssh_deletekeys:   0
 ssh_genkeytypes:  ~
 ssh_svcname:      sshd
@@ -33,13 +33,15 @@ syslog_fix_perms: ~
 # The modules that run in the 'init' stage
 cloud_init_modules:
  - migrator
- - ubuntu-init-switch
  - seed_random
  - bootcmd
  - write-files
  - growpart
  - resizefs
  - set_hostname
+ - update_hostname
+ - update_etc_hosts
+ - rsyslog
  - users-groups
  - ssh
 
@@ -47,19 +49,19 @@ cloud_init_modules:
 cloud_config_modules:
 # Emit the cloud config ready event
 # this can be used by upstart jobs for 'start on cloud-config'.
- - emit_upstart
  - disk_setup
  - mounts
- - ssh-import-id
  - locale
  - set-passwords
+ - apt-pipelining
+ - apt-configure
+ - package-update-upgrade-install
  - timezone
  - puppet
  - chef
  - salt-minion
  - disable-ec2-metadata
  - runcmd
- - byobu
 
 # The modules that run in the 'final' stage
 cloud_final_modules:
@@ -83,7 +85,7 @@ system_info:
    # Default user name + that default users groups (if added/used)
    default_user:
      name: altlinux
-     lock_passwd: true
+     lock_passwd: True
      gecos: ALT Linux Cloud User
      groups: [wheel, adm, uucp, proc, systemd-journal]
      sudo: ["ALL=(ALL) NOPASSWD:ALL"]
@@ -92,4 +94,4 @@ system_info:
    paths:
       cloud_dir: /var/lib/cloud/
       templates_dir: /etc/cloud/templates/
-   ssh_svcname: ssh
+   ssh_svcname: sshd
