--- a/altlinux/cloud-init-alt.cfg
+++ b/altlinux/cloud-init-alt.cfg
@@ -53,8 +53,8 @@ cloud_config_modules:
  - mounts
  - locale
  - set-passwords
- - apt-pipelining
- - apt-configure
+# - apt-pipelining
+# - apt-configure
  - package-update-upgrade-install
  - timezone
  - puppet
