--- a/systemd/cloud-init.service
+++ b/systemd/cloud-init.service
@@ -1,9 +1,9 @@
 [Unit]
 Description=Initial cloud-init job (metadata service crawler)
 After=cloud-init-local.service networking.service
-Before=network-online.target sshd.service sshd-keygen.service systemd-user-sessions.service
+Before=network-online.target sshd.service systemd-user-sessions.service
 Requires=networking.service
-Wants=local-fs.target cloud-init-local.service sshd.service sshd-keygen.service
+Wants=local-fs.target cloud-init-local.service sshd.service
 
 [Service]
 Type=oneshot
