--- a/altlinux/cloud-init-alt.cfg
+++ b/altlinux/cloud-init-alt.cfg
@@ -35,9 +35,11 @@ cloud_init_modules:
  - migrator
  - seed_random
  - bootcmd
- - write-files
+ - write_files
  - growpart
  - resizefs
+ - disk_setup
+ - mounts
  - set_hostname
  - update_hostname
  - update_etc_hosts
@@ -49,22 +51,23 @@ cloud_init_modules:
 cloud_config_modules:
 # Emit the cloud config ready event
 # this can be used by upstart jobs for 'start on cloud-config'.
- - disk_setup
- - mounts
  - locale
  - set-passwords
 # - apt-pipelining
 # - apt-configure
- - package-update-upgrade-install
+ - ntp
  - timezone
- - puppet
- - chef
- - salt-minion
  - disable-ec2-metadata
  - runcmd
 
 # The modules that run in the 'final' stage
 cloud_final_modules:
+ - package-update-upgrade-install
+ - lxd
+ - puppet
+ - chef
+ - salt-minion
+ - mcollective
  - rightscale_userdata
  - scripts-vendor
  - scripts-per-once
@@ -87,7 +90,7 @@ system_info:
      name: altlinux
      lock_passwd: True
      gecos: ALT Linux Cloud User
-     groups: [wheel, adm, uucp, proc, systemd-journal]
+     groups: [wheel, adm, uucp, proc, systemd-journal, xgrp]
      sudo: ["ALL=(ALL) NOPASSWD:ALL"]
      shell: /bin/bash
    # Other config here will be given to the distro class and/or path classes
