--- a/altlinux/cloud-init-alt.cfg
+++ b/altlinux/cloud-init-alt.cfg
@@ -53,21 +53,19 @@ cloud_config_modules:
 # this can be used by upstart jobs for 'start on cloud-config'.
  - locale
  - set-passwords
-# - apt-pipelining
-# - apt-configure
  - ntp
  - timezone
  - disable-ec2-metadata
  - runcmd
 
+# - apt-pipelining
+# - apt-configure
+
 # The modules that run in the 'final' stage
 cloud_final_modules:
  - package-update-upgrade-install
- - lxd
  - puppet
  - chef
- - salt-minion
- - mcollective
  - rightscale_userdata
  - scripts-vendor
  - scripts-per-once
@@ -79,6 +77,10 @@ cloud_final_modules:
  - phone-home
  - final-message
  - power-state-change
+
+# - lxd
+# - salt-minion
+# - mcollective
 
 # System and/or distro specific settings
 # (not accessible to handlers/transforms)
