--- a/systemd/cloud-init.service
+++ b/systemd/cloud-init.service
@@ -1,17 +1,13 @@
 [Unit]
 Description=Initial cloud-init job (metadata service crawler)
-DefaultDependencies=no
 Wants=cloud-init-local.service
-Wants=sshd-keygen.service
 Wants=sshd.service
 After=cloud-init-local.service
-After=networking.service
+After=network.service
+After=NetworkManager.service
 Before=network-online.target
-Before=sshd-keygen.service
 Before=sshd.service
-Before=sysinit.target
 Before=systemd-user-sessions.service
-Conflicts=shutdown.target
 
 [Service]
 Type=oneshot
