--- a/altlinux/cloud-init-alt.cfg
+++ b/altlinux/cloud-init-alt.cfg
@@ -92,7 +92,7 @@ system_info:
      name: altlinux
      lock_passwd: True
      gecos: ALT Linux Cloud User
-     groups: [wheel, adm, uucp, proc, systemd-journal, xgrp]
+     groups: [wheel, adm, uucp, proc, systemd-journal]
      sudo: ["ALL=(ALL) NOPASSWD:ALL"]
      shell: /bin/bash
    # Other config here will be given to the distro class and/or path classes
