--- a/alt/cloud-init-alt.cfg
+++ b/alt/cloud-init-alt.cfg
@@ -7,16 +7,16 @@
 users:
    - default
 
-# If this is set, 'root' will not be able to ssh in and they 
-# will get a message to login instead as the above $user (ubuntu)
+# If this is set, 'root' will not be able to ssh in and they
+# will get a message to login instead as the default $user
 disable_root: true
 
-# This will cause the set+update hostname module to not operate (if true)
-#preserve_hostname: false
-
-ssh_pwauth: 0
-
 mount_default_fields: [~, ~, 'auto', 'defaults,nofail', '0', '2']
+resize_rootfs_tmp: /dev
+ssh_pwauth:   0
+
+# This will cause the set+update hostname module to not operate (if true)
+preserve_hostname: false
 
 ssh_deletekeys:   0
 ssh_genkeytypes:  ~
@@ -24,8 +24,8 @@ ssh_svcname:      sshd
 syslog_fix_perms: ~
 
 # Example datasource config
-# datasource: 
-#    Ec2: 
+# datasource:
+#    Ec2:
 #      metadata_urls: [ 'blah.com' ]
 #      timeout: 5 # (defaults to 50 seconds)
 #      max_wait: 10 # (defaults to 120 seconds)
@@ -35,7 +35,7 @@ cloud_init_modules:
  - migrator
  - seed_random
  - bootcmd
- - write_files
+ - write-files
  - growpart
  - resizefs
  - disk_setup
@@ -43,6 +43,7 @@ cloud_init_modules:
  - set_hostname
  - update_hostname
  - update_etc_hosts
+ - ca-certs
  - rsyslog
  - users-groups
  - ssh
@@ -51,8 +52,10 @@ cloud_init_modules:
 cloud_config_modules:
 # Emit the cloud config ready event
 # this can be used by upstart jobs for 'start on cloud-config'.
+ - ssh-import-id
  - locale
  - set-passwords
+ - spacewalk
  - ntp
  - timezone
  - disable-ec2-metadata
@@ -64,8 +67,11 @@ cloud_config_modules:
 # The modules that run in the 'final' stage
 cloud_final_modules:
  - package-update-upgrade-install
+ - lxd
  - puppet
  - chef
+ - mcollective
+ - salt-minion
  - rightscale_userdata
  - scripts-vendor
  - scripts-per-once
@@ -78,10 +84,6 @@ cloud_final_modules:
  - final-message
  - power-state-change
 
-# - lxd
-# - salt-minion
-# - mcollective
-
 # System and/or distro specific settings
 # (not accessible to handlers/transforms)
 system_info:
@@ -92,7 +94,7 @@ system_info:
      name: altlinux
      lock_passwd: True
      gecos: ALT Linux Cloud User
-     groups: [wheel, adm, uucp, proc, systemd-journal]
+     groups: [wheel, lxd, adm, uucp, proc, systemd-journal]
      sudo: ["ALL=(ALL) NOPASSWD:ALL"]
      shell: /bin/bash
    # Other config here will be given to the distro class and/or path classes
