Set netplan network renderer to default

--- a/alt/cloud-init-alt.cfg
+++ b/alt/cloud-init-alt.cfg
@@ -100,4 +100,6 @@ system_info:
    paths:
       cloud_dir: /var/lib/cloud/
       templates_dir: /etc/cloud/templates/
+   network:
+      renderers: ['netplan', 'etcnet']
    ssh_svcname: sshd
