Add etcnet activator and activator cfg variable

--- a/alt/cloud-init-alt.cfg
+++ b/alt/cloud-init-alt.cfg
@@ -101,5 +101,6 @@ system_info:
       cloud_dir: /var/lib/cloud/
       templates_dir: /etc/cloud/templates/
    network:
-      renderers: ['netplan', 'etcnet']
+      renderers: ['netplan', 'networkd', 'etcnet']
+      activators: ['netplan', 'networkd', 'etcnet']
    ssh_svcname: sshd
